--- a/_posts/0000-01-02-JRodLSU.md
+++ b/_posts/0000-01-02-JRodLSU.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to JRodLSU's slide!"
 ---
 Working on first Pull Request
 Use the left arrow to go back!
