Update line 5 text

--- a/_posts/0000-01-02-JRodLSU.md
+++ b/_posts/0000-01-02-JRodLSU.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to JRodLSU's slide!"
 ---
-Working on first Pull Request
+Now trying out GitHub Desktop
 Use the left arrow to go back!
