Make line 5 more awesome

--- a/_posts/0000-01-02-JRodLSU.md
+++ b/_posts/0000-01-02-JRodLSU.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to JRodLSU's slide!"
 ---
-Now trying out GitHub Desktop
+Now trying out GitHub Desktop :tada:
 Use the left arrow to go back!
